--- a/assets/index.css
+++ b/assets/index.css
@@ -1,94 +1,42 @@
 body {
+    font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%;
+    background-color: #f3f3f3;
 }
 
-.operators {
-    background-color: black;
-    color: white;
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.254);
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.254);
+.inputcontainer {
+    margin-bottom: 20px;
 }
 
-.equal {
-    background-color: black;
-    color: white;
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.254);
-}
-
-.clear {
-    background-color: red;
-    color: white;
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.254);
-}
-
-.calculator {
-    background-color: rgba(128, 128, 128, 0.403);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    height: 350px;
-    border: 1px solid black;
-    box-shadow: 5px 5px 10px rgba(0, 0, 1, 0.3);
-}
-
-#display {
-    width: 263px;
-    height: 50px;
-    font-size: 30px;
-    text-align: right;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 1, 0.3);
-}
-
-.buttons {
+#notesContainer {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    height: 150px;
+    grid-template-columns: repeat(3,1fr);
+    flex-wrap: wrap;
+    gap: 15px;
+    width: 80%;
+    max-width: 600px;
 }
 
-.btn {
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border: none;
-    cursor: pointer;
+
+.note {
+    width: 180px;
+    height: 180px;
+    padding: 10px;
+    font-size: 14px;
+    text-align: center;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    background: #ddd;
-    border: 1px solid rgba(0, 0, 0, 0.254);
-    box-shadow: 5px 5px 10px rgba(0, 0, 1, 0.3);
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
 }
 
-.btn .hover {
-    background: #ccc;
+button {
+    height: 20px;
+    width: 50px;
 }
